<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefs_country_and_languages_settings">

        <ListPreference
            android:defaultValue="@string/country_canada_english_code"
            android:entries="@array/pref_countries_entries"
            android:entryValues="@array/pref_countries_values"
            android:key="@string/pref_country_key"
            android:title="@string/country" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefs_notification_settings">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_notification_setting_key"
            android:title="@string/notification" />

    </PreferenceCategory>

</PreferenceScreen>